# manifold

./: .gitignore  Cargo.toml  flake.nix
assets/: resources.blend
res/: keyboard.blend  resources.blend
res/manifold/: keyboard.glb  mouse.glb
src/: emitter.rs  input_window.rs  keyboard.rs  main.rs  manifold.rs  mouse.rs
