[package]
name = "stardust-xr-manifold"
version = "0.2.0"
edition = "2021"
authors = ["Nova King <technobaboo@proton.me>"]
description = "Take input from your 2D desktop and shove it into 3D!"
license = "MIT"
repository = "https://github.com/StardustXR/manifold/"
homepage = "https://stardustxr.org"

[[bin]]
name = "manifold"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[features]
default = []
dev = ["stardust-xr-molecules/dev"]

[dependencies]
glam = { version = "0.24.0", features = ["mint"] }
mint = "0.5.9"
rustc-hash = "1.1.0"
manifest-dir-macros = "0.1.17"
parking_lot = "0.12.1"
tokio = { version = "1.28.0", features = ["full"] }
send_wrapper = "0.6.0"
num = "0.4.0"
raw-window-handle = "0.5.2"
winit = { version = "0.28.3" }
softbuffer = "0.2.0"
xkbcommon = { version = "0.5.0", features = ["x11"] }
xcb = "1.2.1"
stardust-xr-molecules = "0.24.3"
stardust-xr-fusion = "0.40.1"
color-rs = "0.7.1"
color-eyre = { version = "0.6.2", default-features = false }
input-event-codes = "5.16.8"
